<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tallerrr"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTaller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/Taller"
        android:textSize="32dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_from"/>
    <Button
        android:id="@+id/btmFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change"
        />
    <TextView
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to" />
    <Button
        android:id="@+id/btnto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change"/>

</LinearLayout>